ember-cli added to project as a none global dependacy

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/maxmckenzie/EmberJS-experiment/issues"
   },
-  "homepage": "https://github.com/maxmckenzie/EmberJS-experiment#readme"
+  "homepage": "https://github.com/maxmckenzie/EmberJS-experiment#readme",
+  "devDependencies": {
+    "ember-cli": "^2.10.0"
+  }
 }
